<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="app_title">My Nanodegree Apps</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="stock_hawk">Stock Hawk</string>
    <string name="build_it_bigger">Build it bigger</string>
    <string name="app_material">Make your app material</string>
    <string name="go_ubiquitous">Go ubiquious</string>
    <string name="capstone">Capstone</string>
</resources>
